--- a/Alura Plus/index.html
+++ b/Alura Plus/index.html
@@ -23,23 +23,70 @@
 		
 		<section class="container secundario">
 			<img src="img/Plataformas.png" alt="Um monitor e um celular com o alura plus aberto" class="secundario__imagem">
-			<div class="container__descrição">
+			<div>
 				<h2 class="descrição__título">Assista do seu jeito</h2>
 				<p class="descrição__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
 			</div>
 		</section>
-        <section class="container secundario">
-            <div class="container__descricao">
-            <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
-            <a href="https://www.alura.com.br" class="container__botão secundário__botão">Assinar o Combo+</a>
-            </div>
-            <img src="img/Telas.png" alt="Tela da Alura Plus e da Alura Língua" class="secundario__imagem">
-            </section>
-
-			<section class=”container secundario”>
-				<img src=”img/Notebook.png” alt=”Um monitor exibindo o
-				site da Alura” class=”secundario__imagem”> 
-
-
-           </section>
+		
+		<section class="container secundario">
+			<div class="container__descrição">
+				<p class="descrição__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+				<a href="https://www.alura.com.br" class="container__botão secundario__botao">Assinar o Combo+</a>
+			</div>
+			<img src="img/Telas.png" alt="Tela da Alura Plus e da Alura Língua" class="secundario__imagem">
+		</section>
+		<section class="container secundario">
+		<img src="img/Notebook.png" alt="Um monitor exibindo o site da Alura" class="secundario__imagem">
+		<div class="container__descricao">
+		<h2 class="descrição__título">Baixe seus cursos</h2>
+		<p class="descrição__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
+		</div>
+		</section>
+		<section class="dispositivos">
+			<h2 class=" dispositivos__título">Disponível nos seus dispositivos favoritos</h2>
+			<ul class="dispositivos__lista">
+				<li>
+					<img src="img/tv.png" alt="ícone de televisão">
+					<h3 class="lista__item">TV</h3>
+				</li>
+				<li>
+					<img src="img/computador.png" alt="ícone de computador">
+					<h3 class="lista__item">Computadores</h3>
+				</li>
+				<li>
+					<img src="img/celular.png" alt="ícone de celular">
+					<h3 class="lista__item">Celular</h3>
+				</li>
+			</ul>
+		</section>
+		<footer class="rodapé">
+			<img src="img/Logo.png" alt="Alura+" class="rodapé__logo">
+			<ul class="rodapé__lista">
+				<li class="lista__link">
+					<a href="#">Idioma</a>
+				</li>
+				<li class="lista__link">
+					<a href="#">Dispositivos compatíveis</a>
+				</li>
+				<li class="lista__link">
+					<a href="#">Contrato de assinatura</a>
+		 		</li>
+		 		<li class="lista__link">
+					<a href="#">Política de privacidade</a>
+				</li>
+				<li class="lista__link">
+					<a href="#">Proteção de dados no Brasil</a>
+				</li>
+				<li class="lista__link">
+					<a href="#">Anúncios personalizados</a>
+				</li>
+				<li class="lista__link">
+					<a href="#">Ajuda</a>
+				</li>
+			</ul>
+				<p class="rodapé__texto">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.</p>
+				<p class="rodapé__texto">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+		</footer>
 	</body>
+</html>
